# typed-lambda

./: CHANGELOG.md  typed-lambda.cabal
app/: Complete.hs  Harder.hs  Main.hs  Scoped.hs  Simplest.hs
