cabal-version:      2.4
name:               typed-lambda
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hugo
maintainer:         hpeters1024@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable typed-lambda
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Simplest
                      Harder
                      Complete

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
                    , containers
                    , mtl
                    , some
    hs-source-dirs:   app
    default-language: Haskell2010
